--- a/index.html
+++ b/index.html
@@ -10,102 +10,110 @@
       src="https://kit.fontawesome.com/1240c920c1.js"
       crossorigin="anonymous"
     ></script>
-    <title>Espacio Glitch Store</title>
+    <title>Book Store Ready</title>
   </head>
   <body>
     <div class="grid-container">
       <div class="nav">
         <div class="name">
-          <img src="./assets/img/logo.png" alt="8bits" />
-          <h2>Espacio Glitch Store</h2>
+          <div class="logo">
+            <img src="./assets/img/book-alphabet.png" alt="Libro" />
+          </div>
+          <h2>Book Store Ready</h2>
         </div>
         <div class="menu">
           <a href="#" class="link">
             <h2>Categorías</h2>
-            <div>Videojuegos (50)</div>
-            <div>Consolas (30)</div>
-            <div>Juegos de Mesa (150)</div>
-            <div>Peluches y figuras (500)</div>
+            <div>Preventas (50)</div>
+            <div>Mas Vendidos (30)</div>
+            <div>Promociones (150)</div>
+            <div>Textos Escolares (500)</div>
           </a>
         </div>
         <i class="fa-solid fa-bars fa-lg"></i>
       </div>
       <div class="orderBy">
         <form class="filter">
-          <label>Menú de Categorías</label>
+          <label>Ordenar Por:</label>
           <select name="ordenamiento">
-            <option>Videojuegos</option>
-            <option>Consolas</option>
-            <option>Juegos de Mesa</option>
-            <option>Peluches y figuras</option>
+            <option>Preventas</option>
+            <option>Mas Vendidos</option>
+            <option>Promociones</option>
+            <option>Textos Escolares</option>
           </select>
         </form>
       </div>
       <!--Productos-->
       <div class="main">
+        <!--Producto 1-->
         <div class="productCard">
-          <!--Producto 1-->
-          <img src="./assets/img/Cyberpunk2077.jpeg" alt="Cyberpunk 2077" />
-          <h2>Cyberpunk 2077: Ultimate Edition</h2>
-          <p>Precio: $45.000</p>
+          <img src="./assets/img/Habitos Atomicos.jpg" alt="Habitos Atomicos" />
+          <h2>Hábitos Atómicos</h2>
+          <p><strong>Precio: $32.400</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 2-->
         <div class="productCard">
-          <!--Producto 2-->
           <img
-            src="./assets/img/Resident Evil 4 Remake.jpeg"
-            alt="Resident Evil 4 Remake"
+            src="./assets/img/Lean Startup.png"
+            alt="El Método Lean Startup"
           />
-          <h2>Resident Evil 4 Remake</h2>
-          <p>Precio: $59.000</p>
+          <h2>Lean Startup</h2>
+          <p><strong>Precio: $32.310</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 3-->
         <div class="productCard">
-          <!--Producto 3-->
           <img
-            src="./assets/img/FFVII Rebirth.jpeg"
-            alt="Final Fantasy VII Rebirth"
+            src="./assets/img/Mide lo que Importa.jpg"
+            alt="Mide lo que Importa"
           />
-          <h2>Final Fantasy VII Rebirth</h2>
-          <p>Precio: $69.000</p>
+          <h2>Mide lo que Importa</h2>
+          <p><strong>Precio: $20.970</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 4-->
         <div class="productCard">
-          <!--Producto 4-->
-          <img src="./assets/img/Mortal Kombat_1.jpeg" alt="Mortal Kombat 1" />
-          <h2>Mortal Kombat 1</h2>
-          <p>Precio: $59.000</p>
+          <img src="./assets/img/Ambicion.jpg" alt="Ambición" />
+          <h2>Ambición</h2>
+          <p><strong>Precio: $29.000</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 5-->
         <div class="productCard">
-          <!--Producto 5-->
           <img
-            src="./assets/img/street_fighter_6.jpeg"
+            src="./assets/img/Coaching Co Activo.jpeg"
             alt="Street Fighter 6"
           />
-          <h2>Street Fighter 6</h2>
-          <p>Precio: $59.000</p>
+          <h2>Coaching Co-Activo</h2>
+          <p><strong>Precio: $34.400</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 6-->
         <div class="productCard">
-          <!--Producto 6-->
-          <img src="./assets/img/tekken8.jpeg" alt="Tekken 8" />
-          <h2>Tekken 8</h2>
-          <p>Precio: $59.000</p>
+          <img src="./assets/img/vendes o vendes.png" alt="Vendes o vendes" />
+          <h2>Vendes o vendes</h2>
+          <p><strong>Precio: $20.770</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 7-->
         <div class="productCard">
-          <!--Producto 7-->
-          <img src="./assets/img/Suicide_squad.jpeg" alt="Suicide Squad" />
-          <h2>Suicide Squad</h2>
-          <p>Precio: $69.000</p>
+          <img
+            src="./assets/img/El Camino del lider.jpg"
+            alt="El Camino del Líder"
+          />
+          <h2>El Camino del Líder</h2>
+          <p><strong>Precio: $24.010</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
+        <!--Producto 8-->
         <div class="productCard">
-          <!--Producto 8-->
-          <img src="./assets/img/Dragon Dogma 2.png" alt="Dragon Dogma 2" />
-          <h2>Dragon Dogma 2</h2>
-          <p>Precio: $69.000</p>
+          <img
+            src="./assets/img/El Arte de la Guerra.jpg"
+            alt="El Arte de la Guerra"
+          />
+          <h2>El Arte de la Guerra</h2>
+          <p><strong>Precio: $12.000</strong></p>
           <div class="btn">COMPRAR</div>
         </div>
       </div>
